# fast-params

./: README.md  pyproject.toml
fast_params/: __init__.py
tests/: test_parser.py
