[tool.poetry]
name = "fast-params"
version = "0.1.0"
description = ""
authors = ["Chongchen Chen <chenkovsky@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
starlette = ">=0.37.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[virtualenvs]
in-project = true
